deploy/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: adeline
  labels:
    name: adeline
