deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adeline
  namespace: adeline
spec:
  selector:
    matchLabels:
      app: adeline
  replicas: 2
  template:
    metadata:
      labels:
        app: adeline
    spec:
      containers:
      - name: adeline
        image: ghcr.io/andrewkreuzer/adeline:main-a44d84ab-2807535295 # {"$imagepolicy": "flux-system:adeline"}
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 10
        ports:
          - containerPort: 3000
        volumeMounts:
          - mountPath: /tmp/adeline/
            name: logs
      volumes:
        - name: logs
          emptyDir: {}
