deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adeline
  namespace: adeline
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: adeline
