deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-adeline
  namespace: adeline
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - adeline.andrewkreuzer.com
    secretName: adeline-tls
  rules:
  - host: adeline.andrewkreuzer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adeline
            port:
              number: 80
  ingressClassName: nginx
